--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -1,6 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <string name="appName" translatable="false">DuckDuckGo</string>
     <string name="duckDuckGoLogoDescription">Logotip DuckDuckGo</string>
 
     <!-- Onboarding Activity -->
@@ -71,7 +70,6 @@
     <string name="unableToOpenLink">Te vrste povezave ni mogoče odpreti</string>
 
     <!-- Tabs -->
-    <string name="homeTab" translatable="false">DuckDuckGo</string>
     <string name="tabActivityTitle">Zavihki</string>
     <string name="tabsMenuItem">Zavihki</string>
     <string name="newTabMenuItem">Nov zavihek</string>
@@ -249,12 +247,10 @@
     <string name="rateAppDialogTitle">Ocenite aplikacijo</string>
     <string name="rateAppDialogMessage">Vaše povratne informacije so pomembne. Če vam je všeč, navedite to v mnenju.</string>
     <string name="rateAppDialogPositiveButton">Ocenite aplikacijo</string>
-    <string name="rateAppDialogNegativeButton">@string/noThanks</string>
 
     <string name="giveFeedbackDialogTitle">Žal nam je, da to slišimo</string>
     <string name="giveFeedbackDialogMessage">Povejte nam, kako lahko izboljšamo aplikacijo za vas</string>
     <string name="giveFeedbackDialogPositiveButton">Podajte povratne informacije</string>
-    <string name="giveFeedbackDialogNegativeButton">@string/noThanks</string>
 
     <string name="noThanks">Ne, hvala</string>
 
@@ -347,7 +343,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Ali so kakšne podrobnosti, ki jih želite deliti z ekipo?</string>
     <string name="whatHaveYouBeenEnjoying">Kaj vam je bilo všeč?</string>
     <string name="awesomeToHear">To je super slišati!</string>
-    <string name="shareTheLoveWithARating">Če vam je všeč, navedite to v oceni Play Store.</string>
+    <string name="shareTheLoveWithARating">Če vam je všeč, navedite to v oceni Google Play.</string>
     <string name="rateTheApp">OCENITE APLIKACIJO</string>
     <string name="declineFurtherFeedback">NE, HVALA, KONČAL SEM</string>
     <string name="whichBrokenSites">Kje vidite te težave?</string>
@@ -358,6 +354,5 @@
     <string name="feedbackInitialDisambiguationHappyButtonContentDescription">Gumb Pozitivne povratne informacije</string>
     <string name="feedbackInitialDisambiguationSadButtonContentDescription">Gumb Negativne povratne informacije</string>
     <string name="feedbackIsImportantToUs">Vaše anonimne povratne informacije so nam pomembne.</string>
-
 
 </resources>
