--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -1,6 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <string name="appName" translatable="false">„DUCKDUCKGO“</string>
     <string name="duckDuckGoLogoDescription">„DuckDuckGo“ logotipas</string>
 
     <!-- Onboarding Activity -->
@@ -71,7 +70,6 @@
     <string name="unableToOpenLink">Nepavyko atverti šio tipo nuorodos</string>
 
     <!-- Tabs -->
-    <string name="homeTab" translatable="false">„DUCKDUCKGO“</string>
     <string name="tabActivityTitle">Kortelės</string>
     <string name="tabsMenuItem">Kortelės</string>
     <string name="newTabMenuItem">Nauja kortelė</string>
@@ -249,12 +247,10 @@
     <string name="rateAppDialogTitle">Įvertinkite programą</string>
     <string name="rateAppDialogMessage">Jūsų atsiliepimai mums labai svarbūs. Palikite mums atsiliepimą.</string>
     <string name="rateAppDialogPositiveButton">Įvertinkite programą</string>
-    <string name="rateAppDialogNegativeButton">@string/noThanks</string>
 
     <string name="giveFeedbackDialogTitle">Apgailestaujame</string>
     <string name="giveFeedbackDialogMessage">Pasakykite savo nuomonę, kaip galėtumėme patobulinti programą</string>
     <string name="giveFeedbackDialogPositiveButton">Pateikite atsiliepimą</string>
-    <string name="giveFeedbackDialogNegativeButton">@string/noThanks</string>
 
     <string name="noThanks">Ne, dėkoju</string>
 
@@ -347,7 +343,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Ar norėtumėte papasakoti plačiau?</string>
     <string name="whatHaveYouBeenEnjoying">Kas jums patiko?</string>
     <string name="awesomeToHear">Nuostabu tai girdėti!</string>
-    <string name="shareTheLoveWithARating">Įvertinkite mus „Play Store“ parduotuvėje.</string>
+    <string name="shareTheLoveWithARating">Įvertinkite mus „Google Play“ parduotuvėje.</string>
     <string name="rateTheApp">ĮVERTINKITE PROGRAMĄ</string>
     <string name="declineFurtherFeedback">AČIŪ, NE, AŠ BAIGIAU.</string>
     <string name="whichBrokenSites">Kur susiduriate su šiomis problemomis?</string>
@@ -358,6 +354,5 @@
     <string name="feedbackInitialDisambiguationHappyButtonContentDescription">Teigiamų atsiliepimų mygtukas</string>
     <string name="feedbackInitialDisambiguationSadButtonContentDescription">Neigiamų atsiliepimų mygtukas</string>
     <string name="feedbackIsImportantToUs">Jūsų anoniminiai atsiliepimai mums labai svarbūs.</string>
-
 
 </resources>
