--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -1,6 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <string name="appName" translatable="false">DuckDuckGo</string>
     <string name="duckDuckGoLogoDescription">Logo DuckDuckGo</string>
 
     <!-- Onboarding Activity -->
@@ -71,7 +70,6 @@
     <string name="unableToOpenLink">Kan dit type link niet openen</string>
 
     <!-- Tabs -->
-    <string name="homeTab" translatable="false">DuckDuckGo</string>
     <string name="tabActivityTitle">Tabbladen</string>
     <string name="tabsMenuItem">Tabbladen</string>
     <string name="newTabMenuItem">Nieuw tabblad</string>
@@ -249,12 +247,10 @@
     <string name="rateAppDialogTitle">Beoordeel de app</string>
     <string name="rateAppDialogMessage">Jouw feedback is belangrijk. Laat zien hoe blij je ermee bent met een beoordeling.</string>
     <string name="rateAppDialogPositiveButton">Beoordeel app</string>
-    <string name="rateAppDialogNegativeButton">@string/noThanks</string>
 
     <string name="giveFeedbackDialogTitle">Dat vinden we jammer om te horen</string>
     <string name="giveFeedbackDialogMessage">Laat ons weten hoe we de app voor jou kunnen verbeteren</string>
     <string name="giveFeedbackDialogPositiveButton">Geef feedback</string>
-    <string name="giveFeedbackDialogNegativeButton">@string/noThanks</string>
 
     <string name="noThanks">Nee, bedankt</string>
 
@@ -347,7 +343,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Zijn er details die je met het team wilt delen?</string>
     <string name="whatHaveYouBeenEnjoying">Wat vond je goed?</string>
     <string name="awesomeToHear">Super om te horen!</string>
-    <string name="shareTheLoveWithARating">Laat zien hoe blij je ermee bent door ons te beoordelen in de Play Store.</string>
+    <string name="shareTheLoveWithARating">Laat zien hoe blij je ermee bent door ons te beoordelen in de Google Play.</string>
     <string name="rateTheApp">BEOORDEEL DE APP</string>
     <string name="declineFurtherFeedback">NEE BEDANKT, IK BEN KLAAR</string>
     <string name="whichBrokenSites">Waar zie je deze problemen?</string>
@@ -359,5 +355,4 @@
     <string name="feedbackInitialDisambiguationSadButtonContentDescription">Knop negatieve feedback</string>
     <string name="feedbackIsImportantToUs">Jouw anonieme feedback is belangrijk voor ons.</string>
 
-
-</resources> 
+</resources>
