--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -16,7 +16,6 @@
 
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <string name="appName" translatable="false">DuckDuckGo</string>
     <string name="duckDuckGoLogoDescription">Логотип DuckDuckGo</string>
 
     <!-- Onboarding Activity -->
@@ -39,14 +38,14 @@
     <string name="unifiedOnboardingCustomizationSubtitle">Выберите тему и настройте режим конфиденциальности в соответствии со своими предпочтениями.</string>
 
     <!-- Default Browser -->
-    <string name="cannotLaunchDefaultAppSettings">Не удается открыть экран настроек приложения по умолчанию</string>
+    <string name="cannotLaunchDefaultAppSettings">Не удаётся открыть экран настроек приложения по умолчанию</string>
     <string name="settingsDefaultBrowserEnabled">Сделать браузером по умолчанию</string>
 
     <!-- Browser Activity -->
     <string name="browserPopupMenu">Меню браузера</string>
     <string name="refresh">Обновить</string>
     <string name="back">Назад</string>
-    <string name="forward">Вперед</string>
+    <string name="forward">Вперёд</string>
 
     <string name="omnibarInputHint">Выполнить поиск или ввести URL-адрес</string>
     <string name="clearButtonContentDescription">Сбросить поисковый запрос</string>
@@ -87,7 +86,6 @@
     <string name="unableToOpenLink">Невозможно открыть ссылку этого типа</string>
 
     <!-- Tabs -->
-    <string name="homeTab" translatable="false">DuckDuckGo</string>
     <string name="tabActivityTitle">Вкладки</string>
     <string name="tabsMenuItem">Вкладки</string>
     <string name="newTabMenuItem">Новая вкладка</string>
@@ -103,7 +101,7 @@
 
     <!-- Privacy Dashboard Activities -->
     <string name="privacyDashboardActivityTitle">Панель конфиденциальности</string>
-    <string name="privacyProtectionEnabled">РЕЖИМ КОНФИДЕНЦИАЛЬНОСТИ ВКЛЮЧЕН</string>
+    <string name="privacyProtectionEnabled">РЕЖИМ КОНФИДЕНЦИАЛЬНОСТИ ВКЛЮЧЁН</string>
     <string name="privacyProtectionDisabled">РЕЖИМ КОНФИДЕНЦИАЛЬНОСТИ ВЫКЛЮЧЕН</string>
     <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">УРОВЕНЬ КОНФИДЕНЦИАЛЬНОСТИ ПОВЫШЕН С &lt;img src="%d" /&gt; ДО &lt;img src="%d" /&gt;</string>
     <string name="privacyGradeContentDescription">Рейтинг конфиденциальности</string>
@@ -154,7 +152,7 @@
     <string name="practicesMixed">Средний уровень защиты конфиденциальности</string>
     <string name="practicesBad">Низкий уровень защиты конфиденциальности</string>
     <string name="practicesUnknown">Уровень защиты конфиденциальности неизвестен</string>
-    <string name="practicesOverview">Уровень защиты конфиденциальности показывает, насколько защищены персональные данные, которые вы передаете на сайт.</string>
+    <string name="practicesOverview">Уровень защиты конфиденциальности показывает, насколько защищены персональные данные, которые вы передаёте на сайт.</string>
     <string name="practicesTosdrLink">Данные об уровне защиты конфиденциальности предоставлены <b><u>ToS;DR</u></b></string>
     <string name="practicesIconContentGood">Значок высокого уровня защиты конфиденциальности</string>
     <string name="practicesIconContentBad">Значок низкого уровня защиты конфиденциальности</string>
@@ -200,8 +198,7 @@
     <!-- About Activity -->
     <string name="aboutActivityTitle">Информация о нас</string>
     <string name="aboutHeading">Максимум конфиденциальности, минимум усилий.</string>
-    <string name="aboutDescription">
-        DuckDuckGo устанавливает новый стандарт доверия в сети Интернет.\n\ Веб-браузер DuckDuckGo предоставляет все функции обеспечения конфиденциальности, необходимые для защиты ваших данных во время поиска и навигации в Интернете, в том числе функцию блокировки отслеживающих программ (трекеров), более сложное шифрование и конфиденциальный поиск DuckDuckGo.\n\ В конце концов, Интернет не должен пугать и вызывать негативные эмоции, а обеспечить конфиденциальность в Интернете, которую вы заслуживаете, должно быть так же просто, как закрыть шторы.</string>
+    <string name="aboutDescription">DuckDuckGo устанавливает новый стандарт доверия в сети Интернет.\n\ Веб-браузер DuckDuckGo предоставляет все функции обеспечения конфиденциальности, необходимые для защиты ваших данных во время поиска и навигации в Интернете, в том числе функцию блокировки отслеживающих программ (трекеров), более сложное шифрование и конфиденциальный поиск DuckDuckGo.\n\ В конце концов, Интернет не должен пугать и вызывать негативные эмоции, а обеспечить конфиденциальность в Интернете, которую вы заслуживаете, должно быть так же просто, как закрыть шторы.</string>
     <string name="aboutMoreLink">Больше информации см. по адресу https://duckduckgo.com/about</string>
     <string name="no_suggestions">Нет предложений</string>
 
@@ -273,12 +270,10 @@
     <string name="rateAppDialogTitle">Оцените приложение</string>
     <string name="rateAppDialogMessage">Ваше мнение важно для нас. Пожалуйста, оставьте свой отзыв.</string>
     <string name="rateAppDialogPositiveButton">Оценить приложение</string>
-    <string name="rateAppDialogNegativeButton">@string/noThanks</string>
 
     <string name="giveFeedbackDialogTitle">Очень жаль.</string>
     <string name="giveFeedbackDialogMessage">Есть идеи по улучшению приложения? Дайте нам знать</string>
     <string name="giveFeedbackDialogPositiveButton">Оставить отзыв</string>
-    <string name="giveFeedbackDialogNegativeButton">@string/noThanks</string>
 
     <string name="noThanks">Нет, спасибо</string>
 
@@ -293,7 +288,7 @@
 
     <!-- Privacy Protection Notification -->
     <string name="privacyProtectionNotificationDefaultTitle">Мы защищаем вашу конфиденциальность</string>
-    <string name="privacyProtectionNotificationReportTitle">Ваш отчет о конфиденциальности</string>
+    <string name="privacyProtectionNotificationReportTitle">Ваш отчёт о конфиденциальности</string>
     <string name="privacyProtectionNotificationDefaultDescription">Приложение DuckDuckGo защищает ваши данные, блокируя трекеры и шифруя соединения.</string>
     <string name="privacyProtectionNotificationUpgadeDescription">Вы защитили свои данные, защитив %d незашифрованных соединений во время использования DuckDuckGo.</string>
     <string name="privacyProtectionNotificationTrackerDescription">Вы защитили свои данные, заблокировав %d трекеров во время использования DuckDuckGo.</string>
@@ -316,7 +311,7 @@
     <string name="missingBrowserFeaturesTitleLong">Функции браузера отсутствуют или плохо работают</string>
     <string name="missingBrowserFeaturesTitleShort">Проблемы с функциями браузера</string>
     <string name="missingBrowserFeaturesSubtitle">Какую функцию навигации в Интернете мы могли бы добавить или улучшить?</string>
-    <string name="missingBrowserFeatureSubReasonNavigation">Перемещение вперед, назад, обновление страницы</string>
+    <string name="missingBrowserFeatureSubReasonNavigation">Перемещение вперёд, назад, обновление страницы</string>
     <string name="missingBrowserFeatureSubReasonTabManagement">Создание вкладок/управление вкладками</string>
     <string name="missingBrowserFeatureSubReasonAdPopups">Блокирование рекламы и всплывающих окон</string>
     <string name="missingBrowserFeatureSubReasonVideos">Просмотр видео</string>
@@ -324,7 +319,7 @@
     <string name="missingBrowserFeatureSubReasonBookmarks">Создание закладок/управление закладками</string>
     <string name="missingBrowserFeatureSubReasonOther">Ничего из перечисленного</string>
 
-    <string name="websiteNotLoadingTitleLong">Определенные сайты загружаются с ошибками</string>
+    <string name="websiteNotLoadingTitleLong">Определённые сайты загружаются с ошибками</string>
     <string name="websiteNotLoadingTitleShort">Проблемы с загрузкой сайтов</string>
     <string name="websiteNotLoadingSubtitle">На каком сайте возникает проблема?</string>
 
@@ -334,7 +329,7 @@
     <string name="searchNotGoodEnoughSubReasonTechnicalSearches">Программирование/технический поиск</string>
     <string name="searchNotGoodEnoughSubReasonGoogleLayout">Оформление должно быть больше похоже на поиск Google</string>
     <string name="searchNotGoodEnoughSubReasonFasterLoadTimes">Ускорение загрузки</string>
-    <string name="searchNotGoodEnoughSubReasonSpecificLanguage">Поиск по определенному языку или региону</string>
+    <string name="searchNotGoodEnoughSubReasonSpecificLanguage">Поиск по определённому языку или региону</string>
     <string name="searchNotGoodEnoughSubReasonBetterAutocomplete">Улучшение автозаполнения</string>
     <string name="searchNotGoodEnoughSubReasonOther">Ничего из перечисленного</string>
 
@@ -353,35 +348,34 @@
     <string name="appIsSlowOrBuggyTitleShort">Проблемы с производительностью</string>
     <string name="appIsSlowOrBuggySubtitle">Какие проблемы у вас возникают?</string>
     <string name="appIsSlowOrBuggySubReasonSlowResults">Медленно загружаются веб-страницы или результаты поиска</string>
-    <string name="appIsSlowOrBuggySubReasonAppCrashesOrFreezes">Приложение дает сбой или зависает</string>
+    <string name="appIsSlowOrBuggySubReasonAppCrashesOrFreezes">Приложение даёт сбой или зависает</string>
     <string name="appIsSlowOrBuggySubReasonMediaPlayback">Видео или медиа воспроизводится с ошибками</string>
     <string name="appIsSlowOrBuggySubReasonOther">Ничего из перечисленного</string>
 
     <string name="otherMainReasonTitleLong">Ничего из перечисленного</string>
     <string name="otherMainReasonTitleShort">Другие проблемы</string>
 
-    <string name="openEndedInputHint">Как мы можем улучшить наше приложение? (необязательно)</string>
+    <string name="openEndedInputHint">Как мы можем улучшить наше приложение? (необязательное поле)</string>
     <string name="submitFeedback">ОТПРАВИТЬ ОТЗЫВ</string>
 
-    <string name="tellUsHowToImprove">Что нам следует улучшить?</string>
+    <string name="tellUsHowToImprove">Что мы можем улучшить?</string>
     <string name="thanksForTheFeedback">Спасибо за отзыв!</string>
-    <string name="feedbackNegativeMainReasonPageSubtitle">Что вам больше всего не понравилось?</string>
+    <string name="feedbackNegativeMainReasonPageSubtitle">Что именно вам не понравилось?</string>
     <string name="feedbackNegativeMainReasonPageTitle">Нам очень жаль.</string>
     <string name="feedbackShareDetails">Добавить комментарий</string>
     <string name="sharePositiveFeedbackWithTheTeam">Хотите добавить комментарий для нашей команды разработчиков?</string>
     <string name="whatHaveYouBeenEnjoying">Что вам больше всего понравилось?</string>
     <string name="awesomeToHear">Приятно слышать!</string>
-    <string name="shareTheLoveWithARating">Пожалуйста, оцените наше приложение в Play Store.</string>
+    <string name="shareTheLoveWithARating">Пожалуйста, оцените наше приложение в Google Play.</string>
     <string name="rateTheApp">ОЦЕНИТЬ ПРИЛОЖЕНИЕ</string>
     <string name="declineFurtherFeedback">НЕТ, СПАСИБО.</string>
     <string name="whichBrokenSites">Где возникают эти проблемы?</string>
     <string name="whichBrokenSitesHint">На каком сайте возникли проблемы?</string>
-    <string name="feedbackSpecificAsPossible">Отвечайте как можно конкретнее.</string>
-    <string name="feedbackInitialDisambiguationTitle">Итак, начнем!</string>
+    <string name="feedbackSpecificAsPossible">Опишите максимально подробно.</string>
+    <string name="feedbackInitialDisambiguationTitle">Итак, начнём!</string>
     <string name="feedbackInitialDisambiguationSubtitle">К какой категории вы бы отнесли свой отзыв?</string>
     <string name="feedbackInitialDisambiguationHappyButtonContentDescription">Кнопка отправки положительного отзыва</string>
-    <string name="feedbackInitialDisambiguationSadButtonContentDescription">Кнопка отправки негативного отзыва</string>
-    <string name="feedbackIsImportantToUs">Ваш анонимный отзыв важен для нас.</string>
+    <string name="feedbackInitialDisambiguationSadButtonContentDescription">Кнопка отправки отрицательного отзыва</string>
+    <string name="feedbackIsImportantToUs">Ваш отзыв важен для нас. Отзыв анонимный.</string>
 
-
-</resources> 
+</resources>
