Improve string translation settingLightTheme

--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -152,7 +152,7 @@
     <string name="settingsHeadingOther">Ostalo</string>
     <string name="settingsHeadingPrivacy">Zaštita privatnosti</string>
     <string name="settingsHeadingAutocomplete">Automatsko ispunjavanje</string>
-    <string name="settingsLightTheme">Tema svjetla</string>
+    <string name="settingsLightTheme">Svijetla tema</string>
     <string name="settingsAboutDuckduckgo">O DuckDuckGo</string>
     <string name="settingsVersion">Inačica</string>
     <string name="leaveFeedback">Ostavi povratne informacije</string>
