"Google Play" name returned to "Play Sore".

--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -343,7 +343,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Има ли някакви подробности, които искате да споделите с екипа?</string>
     <string name="whatHaveYouBeenEnjoying">Кое Ви беше най-приятно?</string>
     <string name="awesomeToHear">Страхотно е да чуем това!</string>
-    <string name="shareTheLoveWithARating">Моля, споделете вашето харесване каот оцените в Google Play.</string>
+    <string name="shareTheLoveWithARating">Моля, споделете вашето харесване каот оцените в Play Store.</string>
     <string name="rateTheApp">ОЦЕНЕТЕ ПРИЛОЖЕНИЕТО</string>
     <string name="declineFurtherFeedback">НЕ БЛАГОДАРЯ, ПРИКЛЮЧИХ</string>
     <string name="whichBrokenSites">Къде виждате тези проблеми?</string>
