--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -347,7 +347,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Máte nějaké podrobnosti, o které byste se chtěli podělit s týmem?</string>
     <string name="whatHaveYouBeenEnjoying">Co se vám líbilo?</string>
     <string name="awesomeToHear">To rádi slyšíme!</string>
-    <string name="shareTheLoveWithARating">Podělte se prosím o pozitiva hodnocením na Google Play.</string>
+    <string name="shareTheLoveWithARating">Podělte se prosím o pozitiva hodnocením na Play Store.</string>
     <string name="rateTheApp">OHODNOŤTE APLIKACI</string>
     <string name="declineFurtherFeedback">NE, DĚKUJI, JSEM HOTOV/A.</string>
     <string name="whichBrokenSites">Kde jste narazili na tyto problémy?</string>
