--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -343,7 +343,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Er der nogen detaljer, du gerne vil dele med teamet?</string>
     <string name="whatHaveYouBeenEnjoying">Hvad har du haft glæde af?</string>
     <string name="awesomeToHear">Fantastisk at høre!</string>
-    <string name="shareTheLoveWithARating">Del kærligheden ved at bedømme os i Google Play.</string>
+    <string name="shareTheLoveWithARating">Del kærligheden ved at bedømme os i Play Store.</string>
     <string name="rateTheApp">BEDØM APPEN</string>
     <string name="declineFurtherFeedback">NEJ TAK, JEG ER FÆRDIG.</string>
     <string name="whichBrokenSites">Hvor oplever du disse problemer?</string>
