--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -343,7 +343,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Υπάρχουν λεπτομέρειες που θα θέλατε να μοιραστείτε με την ομάδα;</string>
     <string name="whatHaveYouBeenEnjoying">Ποια στοιχεία απολαμβάνετε;</string>
     <string name="awesomeToHear">Αυτό μας κάνει πολύ χαρούμενους!</string>
-    <string name="shareTheLoveWithARating">Δείξτε την αγάπη σας αξιολογώντας μας στο Google Play.</string>
+    <string name="shareTheLoveWithARating">Δείξτε την αγάπη σας αξιολογώντας μας στο Play Store.</string>
     <string name="rateTheApp">ΑΞΙΟΛΟΓΗΣΤΕ ΤΗΝ ΕΦΑΡΜΟΓΗ</string>
     <string name="declineFurtherFeedback">ΟΧΙ ΕΥΧΑΡΙΣΤΩ, ΤΕΛΕΙΩΣΑ</string>
     <string name="whichBrokenSites">Πού βλέπετε τα προβλήματα αυτά;</string>
