--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -343,7 +343,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Y a-t-il des informations que vous aimeriez partager avec l\'équipe ?</string>
     <string name="whatHaveYouBeenEnjoying">Qu\'avez-vous apprécié ?</string>
     <string name="awesomeToHear">Nous sommes heureux de l\'apprendre !</string>
-    <string name="shareTheLoveWithARating">Veuillez partager votre appréciation en donnant une note sur le Google Play.</string>
+    <string name="shareTheLoveWithARating">Veuillez partager votre appréciation en donnant une note sur le Play Store.</string>
     <string name="rateTheApp">NOTEZ L\'APPLICATION</string>
     <string name="declineFurtherFeedback">NON MERCI, J\'AI TERMINÉ</string>
     <string name="whichBrokenSites">Où voyez-vous ces problèmes ?</string>
