--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -343,7 +343,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Želite li s timom podijeliti neke pojedinosti?</string>
     <string name="whatHaveYouBeenEnjoying">U čemu ste uživali?</string>
     <string name="awesomeToHear">Divno je to čuti!</string>
-    <string name="shareTheLoveWithARating">Podijelite ljubav ocjenom na Google Play trgovini.</string>
+    <string name="shareTheLoveWithARating">Podijelite ljubav ocjenom na Play trgovini.</string>
     <string name="rateTheApp">OCIJENITE APLIKACIJU</string>
     <string name="declineFurtherFeedback">NE HVALA, ZAVRŠIO/LA SAM.</string>
     <string name="whichBrokenSites">Gdje vidite te probleme?</string>
