--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -359,7 +359,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Ci sono informazioni specifiche che desideri condividere con il team?</string>
     <string name="whatHaveYouBeenEnjoying">Cosa ti è piaciuto?</string>
     <string name="awesomeToHear">Fantastico!</string>
-    <string name="shareTheLoveWithARating">Condividi il tuo parere positivo valutando l\'app in Google Play.</string>
+    <string name="shareTheLoveWithARating">Condividi il tuo parere positivo valutando l\'app in Play Store.</string>
     <string name="rateTheApp">VALUTA L\'APP</string>
     <string name="declineFurtherFeedback">NO, GRAZIE</string>
     <string name="whichBrokenSites">Dove hai notato questi problemi?</string>
