--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -347,7 +347,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Ar norėtumėte papasakoti plačiau?</string>
     <string name="whatHaveYouBeenEnjoying">Kas jums patiko?</string>
     <string name="awesomeToHear">Nuostabu tai girdėti!</string>
-    <string name="shareTheLoveWithARating">Įvertinkite mus „Google Play“ parduotuvėje.</string>
+    <string name="shareTheLoveWithARating">Įvertinkite mus „Play Store“ parduotuvėje.</string>
     <string name="rateTheApp">ĮVERTINKITE PROGRAMĄ</string>
     <string name="declineFurtherFeedback">AČIŪ, NE, AŠ BAIGIAU.</string>
     <string name="whichBrokenSites">Kur susiduriate su šiomis problemomis?</string>
