--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -343,7 +343,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Har du noen detaljer du ønsker å dele med teamet?</string>
     <string name="whatHaveYouBeenEnjoying">Hva liker du?</string>
     <string name="awesomeToHear">Flott å høre!</string>
-    <string name="shareTheLoveWithARating">Vennligst del kjærligheten gjennom å vurdere oss i Google Play-butikken.</string>
+    <string name="shareTheLoveWithARating">Vennligst del kjærligheten gjennom å vurdere oss i Play-butikken.</string>
     <string name="rateTheApp">VURDER APPEN</string>
     <string name="declineFurtherFeedback">NEI TAKK, JEG ER FERDIG</string>
     <string name="whichBrokenSites">Når opplever du disse problemene?</string>
