--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -351,7 +351,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Czy chciał(a)byś przekazać naszemu zespołowi jakieś informacje?</string>
     <string name="whatHaveYouBeenEnjoying">Co Ci się podoba?</string>
     <string name="awesomeToHear">Świetnie!</string>
-    <string name="shareTheLoveWithARating">Podziel się swoimi wrażeniami, oceniając nas w Google Play.</string>
+    <string name="shareTheLoveWithARating">Podziel się swoimi wrażeniami, oceniając nas w Play Store.</string>
     <string name="rateTheApp">OCEŃ APLIKACJĘ</string>
     <string name="declineFurtherFeedback">NIE, DZIĘKUJĘ, SKOŃCZYŁEM(-AM).</string>
     <string name="whichBrokenSites">Gdzie dostrzegasz te problemy?</string>
