--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -343,7 +343,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Há alguns detalhes que gostaria de partilhar com a equipa?</string>
     <string name="whatHaveYouBeenEnjoying">Do que tem gostado?</string>
     <string name="awesomeToHear">É fantástico saber isso!</string>
-    <string name="shareTheLoveWithARating">Partilhe o que gosta com a classificação na Google Play.</string>
+    <string name="shareTheLoveWithARating">Partilhe o que gosta com a classificação na Play Store.</string>
     <string name="rateTheApp">CLASSIFIQUE A APLICAÇÃO</string>
     <string name="declineFurtherFeedback">NÃO, OBRIGADO. JÁ TERMINEI</string>
     <string name="whichBrokenSites">Onde está a ver esses problemas?</string>
