--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -347,7 +347,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Există detalii pe care doriți să le împărtășiți echipei?</string>
     <string name="whatHaveYouBeenEnjoying">Ce v-a plăcut?</string>
     <string name="awesomeToHear">Ne bucurăm să auzim aceasta!</string>
-    <string name="shareTheLoveWithARating">Vă rugăm să vă partajați preferința, evaluând aplicația în Google Play.</string>
+    <string name="shareTheLoveWithARating">Vă rugăm să vă partajați preferința, evaluând aplicația în Play Store.</string>
     <string name="rateTheApp">EVALUAȚI APLICAȚIA</string>
     <string name="declineFurtherFeedback">NU, MULȚUMESC, AM TERMINAT</string>
     <string name="whichBrokenSites">Unde vedeți aceste probleme?</string>
