--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -366,7 +366,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Хотите добавить комментарий для нашей команды разработчиков?</string>
     <string name="whatHaveYouBeenEnjoying">Что вам больше всего понравилось?</string>
     <string name="awesomeToHear">Приятно слышать!</string>
-    <string name="shareTheLoveWithARating">Пожалуйста, оцените наше приложение в Google Play.</string>
+    <string name="shareTheLoveWithARating">Пожалуйста, оцените наше приложение в Play Store.</string>
     <string name="rateTheApp">ОЦЕНИТЬ ПРИЛОЖЕНИЕ</string>
     <string name="declineFurtherFeedback">НЕТ, СПАСИБО.</string>
     <string name="whichBrokenSites">Где возникают эти проблемы?</string>
