--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -344,7 +344,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Chceli by ste tímu povedať podrobnosti?</string>
     <string name="whatHaveYouBeenEnjoying">Čo sa vám páčilo?</string>
     <string name="awesomeToHear">Tešíme sa z toho!</string>
-    <string name="shareTheLoveWithARating">Podeľte sa o svoju spokojnosť hodnotením v Google Play.</string>
+    <string name="shareTheLoveWithARating">Podeľte sa o svoju spokojnosť hodnotením v Obchode Play.</string>
     <string name="rateTheApp">OHODNOTIŤ APLIKÁCIU</string>
     <string name="declineFurtherFeedback">NIE, ĎAKUJEM, SKONČIL SOM.</string>
     <string name="whichBrokenSites">Kde ste si všimli tieto problémy?</string>
