--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -351,7 +351,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Ali so kakšne podrobnosti, ki jih želite deliti z ekipo?</string>
     <string name="whatHaveYouBeenEnjoying">Kaj vam je bilo všeč?</string>
     <string name="awesomeToHear">To je super slišati!</string>
-    <string name="shareTheLoveWithARating">Če vam je všeč, navedite to v oceni Google Play.</string>
+    <string name="shareTheLoveWithARating">Če vam je všeč, navedite to v oceni Play Store.</string>
     <string name="rateTheApp">OCENITE APLIKACIJO</string>
     <string name="declineFurtherFeedback">NE, HVALA, KONČAL SEM</string>
     <string name="whichBrokenSites">Kje vidite te težave?</string>
