--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -343,7 +343,7 @@
     <string name="sharePositiveFeedbackWithTheTeam">Zijn er details die je met het team wilt delen?</string>
     <string name="whatHaveYouBeenEnjoying">Wat vond je goed?</string>
     <string name="awesomeToHear">Super om te horen!</string>
-    <string name="shareTheLoveWithARating">Laat zien hoe blij je ermee bent door ons te beoordelen in de Google Play.</string>
+    <string name="shareTheLoveWithARating">Laat zien hoe blij je ermee bent door ons te beoordelen in de Play Store.</string>
     <string name="rateTheApp">BEOORDEEL DE APP</string>
     <string name="declineFurtherFeedback">NEE BEDANKT, IK BEN KLAAR</string>
     <string name="whichBrokenSites">Waar zie je deze problemen?</string>
